<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/welcome_to_byblos"
            android:textAlignment="center"
            android:textFontWeight="100"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/a_group_43_project"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/loginButton_main"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:height="45dp"
            android:fadingEdge="none"
            android:fadingEdgeLength="50dp"
            android:padding="10dp"
            android:text="@string/login"
            app:cornerRadius="100dp" />

        <Button
            android:id="@+id/registerButton_main"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:height="45dp"
            android:fadingEdge="none"
            android:fadingEdgeLength="50dp"
            android:padding="10dp"
            android:text="@string/register"
            app:cornerRadius="100dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>